--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,8 +30,8 @@
 
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
-    --ring: 222.2 84% 4.9%;
- 
+    --ring: 240 84% 4.9%;
+    --ring-blue: 201, 100%, 35%;
     --radius: 0.5rem;
   }
  
